fortify scan setup